# scientific-document-extraction-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tables.txt  verify.py
notebooks/: exp.ipynb  table_parser.ipynb
src/classifier/: chunk_classifier.py
src/extraction/: evidence_verifier.py  food_discovery.py  json_utils.py  llm_client.py  pipeline.py  retriever.py  schemas.py  table_extractor.py
src/extraction/extractors/: food_master_extractor.py  raw_material_extractor.py  table1_extractor.py  table2_extractor.py  table3_extractor.py  table4_extractor.py  table5_extractor.py  table6_extractor.py
src/ingestion/: markdown_extractor.py  pdf_loader.py  pipeline.py  table_extractor.py
src/preprocessing/: chunker.py  cleaner.py  pipeline.py  section_splitter.py  table_parser.py
src/prompts/: food_discovery_prompts.py
src/storage/: db.py  models.py
src/test/: test_chunk_construction.py  test_extraction_pipeline.py  test_llm.py  test_post_verification.py
src/utils/: logger.py  timer.py  token_count.py
src/verification/: __init__.py  pipeline.py
