[project]
name = "information-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
